--- a/src/templates/report_tasks.html
+++ b/src/templates/report_tasks.html
@@ -44,7 +44,7 @@
         .gap-2 {
             gap: 8px;
         }
-          .badge {
+        .badge {
     font-size: 0.875rem;
     padding: 4px 8px;
     border-radius: 4px;
@@ -126,18 +126,16 @@
     {% endwith %}
 </div>
 <div class="container my-5">
-   <h5 class="text-center my-4">Tasks related to {{ task.name }}</h5>
-    <form method="GET" action="{{ url_for('task.related_tasks', task_id=task.id) }}" class="row mb-4">
-
-        <div class="col-md-2">
-            <label for="status" class="form-label">Filter by Status</label>
-          <select name="status" id="status" class="form-select">
+   <h5 class="text-center my-4">All tasks of chosen report</h5>
+       <form method="GET" action="{{ url_for('report.report_tasks', report_id = report.id) }}" class="row mb-4">
+ <div class="col-md-2">
+            <label for="organization" class="form-label">Filter by Organization</label>
+            <select name="organisation" id="organisation" class="form-select">
                 <option value="">All</option>
-                    <option value="OPEN" {% if status == "OPEN" %}selected{% endif %}>Open</option>
-    <option value="REQUIRES_CLASSIFICATION" {% if status == "REQUIRES_CLASSIFICATION" %}selected{% endif %}>Clarification required</option>
-    <option value="IN_PROGRESS" {% if status == "IN_PROGRESS" %}selected{% endif %}>In progress</option>
-    <option value="RESOLVED" {% if status == "RESOLVED" %}selected{% endif %}>Resolved</option>
-</select>
+                {% for org in organisations %}
+                    <option value="{{ org.id }}" {% if organisation == org.id %}selected{% endif %}>{{ org.name }}</option>
+                {% endfor %}
+            </select>
         </div>
         <div class="col-md-2">
             <label for="sort" class="form-label">Sort by Date</label>
@@ -152,37 +150,40 @@
         </div>
     </form>
 
- {% for item in related_tasks %}
+ {% for item in tasks_with_organisation%}
     <div class="task-card">
         <div class="task-info" style="margin-right: 20px">
             <div>
-                <p class="task-name">{{ item.name }}</p>
+                <p class="task-name">{{ item.task.name }}</p>
             </div>
 
             <div style="margin-left: 20px">
-                <p class="text-truncate">{{ item.description or 'No Description' }}</p>
+                <p class="text-truncate">{{ item.task.description or 'No Description' }}</p>
             </div>
-        </div>
 
+        </div>
+ <div class="d-flex align-items-center">
+            {% if item.task.creator.user.uid == current_user.uid %}
+                    My Task
+                {% else %}
+                    {{ item.organisation.name if item.organisation else 'No Organization' }}
+                {% endif %}
+        </div>
         <div class="d-flex align-items-center">
             <span class="badge
-    {% if item.status == 'OPEN' %}open
-    {% elif item.status == 'REQUIRES_CLARIFICATION' %}requires-clarification
-    {% elif item.status == 'IN_PROGRESS' %}in-progress
-    {% elif item.status == 'RESOLVED' %}resolved
+    {% if item.task.status == 'OPEN' %}open
+    {% elif item.task.status == 'REQUIRES_CLARIFICATION' %}requires-clarification
+    {% elif item.task.status == 'IN_PROGRESS' %}in-progress
+    {% elif item.task.status == 'RESOLVED' %}resolved
     {% else %}unknown{% endif %}">
-    {% if item.status == 'OPEN' %}Open
-    {% elif item.status == 'REQUIRES_CLARIFICATION' %}Clarification required
-    {% elif item.status == 'IN_PROGRESS' %}In Progress
-    {% elif item.status == 'RESOLVED' %}Resolved
+    {% if item.task.status == 'OPEN' %}Open
+    {% elif item.task.status == 'REQUIRES_CLARIFICATION' %}Clarification required
+    {% elif item.task.status == 'IN_PROGRESS' %}In Progress
+    {% elif item.task.status == 'RESOLVED' %}Resolved
     {% else %}Unknown{% endif %}
 </span>
         </div>
-    {% if item.reports %}
-        <div>
-            <a href="{{ url_for('report.manage_report', report_id=item.reports[0].id) }}" style=" text-decoration: none;">Link to associated report</a>
-        </div>
-    {% endif %}
+
         <div class="d-flex align-items-center gap-2">
              <a href="#" data-bs-toggle="offcanvas" data-bs-target="#TaskOffcanvas{{ item.id }}">
                <i class="bi bi-three-dots-vertical" style="color: black"></i>
@@ -197,19 +198,19 @@
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
         <div class="offcanvas-body">
-            <p>{{ item.name }}</p>
+            <p>{{ item.task.name }}</p>
             <h6>Description:</h6>
-            <p>{{ item.description or 'No Description' }}</p>
+            <p>{{ item.task.description or 'No Description' }}</p>
 
-             <h6>Status:</h6>
+           <h6>Status:</h6>
             <p>
-    {% if item.status == 'OPEN' %}
+    {% if item.task.status == 'OPEN' %}
         Open
-    {% elif item.status == 'REQUIRES_CLARIFICATION' %}
+    {% elif item.task.status == 'REQUIRES_CLARIFICATION' %}
         Clarification required
-    {% elif item.status == 'IN_PROGRESS' %}
+    {% elif item.task.status == 'IN_PROGRESS' %}
         In Progress
-    {% elif item.status == 'RESOLVED' %}
+    {% elif item.task.status == 'RESOLVED' %}
         Resolved
     {% else %}
         Unknown
@@ -218,9 +219,14 @@
             <div>
         </div>
                <h6>Assigned Agents:</h6>
-              <div id="assignedAgents">
-                {% for agent in related_agents[item.id] %}
-                    <span class="badge">{{ agent }}</span>
+            <div id="assignedAgents">
+                {% for agent in item.task_agents %}
+                    <span class="badge">{{ agent.user.username }}</span>
+                {% endfor %}
+            </div>
+            <div id="requestedAgents">
+                {% for agent in item.task_request_agents %}
+                    <span class="badge bg-gray">{{ agent.user.username }}</span>
                 {% endfor %}
             </div>
 
